--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
 
             <div class="info-area">
                 <div class="pic">
-                    <img src="media/11.jpg" alt="">
+                    <img src="media/11.jpeg" alt="">
                 </div>
                 <div class="text">
                     <h2 style="color: #ff4242; margin: 10px 0 50px 0;"> BISHOY KHALIFA</h2>
@@ -102,7 +102,7 @@
 
                     <div class="card">
                         <div class="card-pic">
-                            <img src="media/mmr.webp" alt="">
+                            <img src="media/mmr.webp" alt="el mammar">
                         </div>
                         <div class="card-txt">
                             <h3> The Passage</h3>
