--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
 
         <div class="info-area">
           <div class="pic">
-            <img src="media/pp.jpg" alt="" />
+            <img src="media/pp.jpg" alt="pPIC" />
           </div>
           <div class="text">
             <h2 style="color: #ff4242; margin: 10px 0 50px 0;">
