--- a/bio.html
+++ b/bio.html
@@ -42,6 +42,7 @@
           </ul>
         </div>
       </nav>
+
       <div class="text-area">
         <div class="head-text">
           <h1>BIOGRAPHY</h1>
@@ -49,7 +50,7 @@
 
         <div class="info-area">
           <div class="pic">
-            <img src="media/pp.jpg" alt="pPIC" />
+            <img src="media/pp.jpg" width="450" alt="pPIC" />
           </div>
           <div class="text">
             <h2 style="color: #ff4242; margin: 10px 0 50px 0;">
@@ -109,7 +110,7 @@
           <div class="s2-info">
             <div class="card">
               <div class="card-pic">
-                <img src="media/passage.jpg" alt="el mammar" />
+                <img src="media/passage.jpg" width="" alt="el mammar" />
               </div>
               <div class="card-txt">
                 <h3>The Passage</h3>
@@ -120,62 +121,6 @@
                 rendering. Smoke simulations. As well as developing tools and
                 HDAs for the rest of the FX team to use to efficiently produce
                 great-looking effects
-              </div>
-            </div>
-        </nav>
-        <div class="text-area">
-            <div class="head-text">
-                <h1>BIOGRAPHY</h1>
-            </div>
-
-            <div class="info-area">
-                <div class="pic">
-                    <img src="/media/pp.jpg" alt="">
-                </div>
-                <div class="text">
-                    <h2 style="color: #ff4242; margin: 10px 0 50px 0;"> BISHOY KHALIFA</h2>
-                    <p>I do a lot of different stuff. Primarily I'm an FX TD.
-
-                        Currently working as Lead FX TD @ <span
-                            style="font-weight: bolder; text-decoration: underline;"> Trend VFX</span>. The biggest VFX
-                        company in Egypt.
-
-                        ​<br><br>
-
-                        I also make cool - and usually small scale - projects on <span
-                            style="font-weight: bolder; text-decoration: underline; color: #00B3F1"> Vimeo</span> using
-                        Houdini. because Houdini is
-                        the best!
-
-                        ​<br><br>
-
-                        I sell the files for these projects on <span
-                            style="font-weight: bolder; text-decoration: underline; color: #60E692"> Gumroad.</span>
-                        ​<br><br>
-                        ​
-
-                        I make Houdini tutorials on CGCircuit as well. My goal with these tutorials is to be brief,
-                        packed with knowledge, and straight to the point.
-
-                        ​ ​<br><br>
-
-                        In my free time, I make music.
-
-                        ​ ​<br><br>
-
-                        I also make abstract art every once in a while.
-                        ​<br><br>
-                        ​
-
-            <div class="card">
-              <div class="card-pic">
-                <img src="media/adliallam.webp" alt="" />
-              </div>
-              <div class="card-txt">
-                <h3>Afareet Adli Allam</h3>
-                <span class="card-txt-date">June 2017</span><br /><br />
-                Smoke simulation, shading,and rendring. Fire simulation,
-                shading, and rendering, Water, Grains, Lava, and Particles.
               </div>
             </div>
 
@@ -224,6 +169,18 @@
                 Blood setup and simulation.
               </div>
             </div>
+
+            <div class="card">
+              <div class="card-pic">
+                <img src="media/Afareet Adli Allam..jpg" alt="" />
+              </div>
+              <div class="card-txt">
+                <h3>Afareet Adli Allam</h3>
+                <span class="card-txt-date">June 2017</span><br /><br />
+                Smoke simulation, shading,and rendring. Fire simulation,
+                shading, and rendering, Water, Grains, Lava, and Particles.
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -234,10 +191,5 @@
         <a href="#">Subscribe Now</a>
       </div>
     </div>
-
-
-
-
-</body>
-
+  </body>
 </html>
